<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_info">Personal Info</string>
    <string name="known_for">Known for</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="biography">Biography</string>
    <string name="person_images">Person Images</string>
    <string name="save_in_gallery">Save in Gallery</string>
    <string name="connection_problem">Connection Problem!!</string>
</resources>