<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="person"
            type="com.yelloco.movieapp.models.details.PersonDetailsResponse" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PersonDetailsFragment">

        <ImageView
            android:id="@+id/person_image_view"
            loadProfileImage500="@{person.profilePath}"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/person_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/person_image_view"
            android:layout_toRightOf="@id/person_image_view"
            android:text="@{person.name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/known_for_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_name_tv"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/person_image_view"
            android:layout_toRightOf="@id/person_image_view"
            android:text="@string/known_for"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/known_for_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/known_for_txt"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/person_image_view"
            android:layout_toRightOf="@id/person_image_view"
            android:text="@{person.knownForDepartment}" />

        <TextView
            android:id="@+id/birthday_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/known_for_tv"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/person_image_view"
            android:layout_toRightOf="@id/person_image_view"
            android:text="@string/birthday"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/birthday_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/birthday_txt"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/person_image_view"
            android:layout_toRightOf="@id/person_image_view"
            android:text="@{person.birthday}" />

        <TextView
            android:id="@+id/place_of_birth_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/birthday_tv"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/person_image_view"
            android:layout_toRightOf="@id/person_image_view"
            android:text="@string/place_of_birth"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/place_of_birth_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/place_of_birth_txt"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/person_image_view"
            android:layout_toRightOf="@id/person_image_view"
            android:text="@{person.placeOfBirth}" />


        <TextView
            android:id="@+id/biography_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_image_view"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/biography"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/biography_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/biography_txt"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:lines="8"
            android:text="@{person.biography}"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/biography_tv"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/person_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/person_images"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/person_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_image"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/list_item_popular_people" />


    </RelativeLayout>
</layout>
